--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "zod": "^3.23.8"
