--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "client/**/*",
     "server/**/*",
     "shared/**/*",
-    "vite.config.js",
+    "vite.config.ts",
     "vite.config.server.ts"
   ],
   "exclude": ["node_modules", "dist"]
